--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "eslint": "9.16.0",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
